--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -25,3 +25,18 @@
     display: flex;
     flex-direction: row;
 }
+.crop-img{
+    display:flex;
+    overflow: hidden;
+    width:200px;
+    height:200px;
+    justify-content: center;
+}
+.footer-img{
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    width:100%;
+    height:100px;
+}
+
