--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -57,3 +57,19 @@
 .hero-wrap .text h2 span{
     color: black;
 }
+.owl-carousel .owl-item img {
+    width:unset;
+}
+.auth-img{
+    width:100%;
+    height:inherit;
+    overflow:hidden;
+}
+.row{
+    justify-content: center;
+}
+@media (max-width: 992px) {
+    .compare-img{
+        width:50%;
+    }
+}
